Fix channel banner overflow on iOS
fixes #45

--- a/sass/includes/channel-page.sass
+++ b/sass/includes/channel-page.sass
@@ -14,6 +14,7 @@
   width: 100%
   height: auto
   border-radius: 8px
+  align-self: flex-start
 
 .channel-data
   background-color: c.$bg-darker
